--- a/app/views/spec_sheet/_script.html
+++ b/app/views/spec_sheet/_script.html
@@ -11,7 +11,7 @@
         svg.setAttribute('height', container.scrollHeight);
         svg.setAttribute('width', container.scrollWidth);
       }
-      document.body.style.background = 'fuchsia';
+      //document.body.style.background = 'fuchsia';
     }
   }, 1000);
 </script>
