--- a/lib/css/sass/base/variables.scss
+++ b/lib/css/sass/base/variables.scss
@@ -1,2 +1,19 @@
 $green: #42ea83;
 $blue: #51b2fe;
+$dark1: rgba(0, 0, 0, 0.1);
+$dark2: rgba(0, 0, 0, 0.2);
+$dark3: rgba(0, 0, 0, 0.3);
+$dark4: rgba(0, 0, 0, 0.4);
+$dark5: rgba(0, 0, 0, 0.5);
+$dark6: rgba(0, 0, 0, 0.6);
+$dark7: rgba(0, 0, 0, 0.7);
+$dark8: rgba(0, 0, 0, 0.8);
+$dark9: rgba(0, 0, 0, 0.9);
+
+$p1: 10px;
+$p2: 20px;
+$p3: 40px;
+
+$b1: 2px solid #eee;
+$b2: 4px solid #eee;
+$b3: 2px solid #ccc;
