--- a/app/views/spec_sheet/pages/_cover.haml
+++ b/app/views/spec_sheet/pages/_cover.haml
@@ -5,14 +5,12 @@
         = render partial: 'spec_sheet/image', locals: { src: @project.image_url }
       %td.center.x-fill
         .pt3
-          %h1.page-title.pb3= @project.name
+          %h1.page-title.pb3
+            = "#{@project.name} (#{@project.ref_number})"
           %ul.project-info
             %li
               %b Collection:
               = @project.collection
-            %li
-              %b Reference no:
-              = @project.ref_number
             %li
               %b Contact:
               = @project.organization.owner.email
