--- a/app/views/spec_sheet/_instruction.haml
+++ b/app/views/spec_sheet/_instruction.haml
@@ -2,16 +2,16 @@
 - img_count = 1 unless img_count > 0
 - img_width = "#{100 / img_count}%"
 .instruction
-  %table 
-    %colgroup
-      - img_count.times do |i|
-        %col{:width => img_width}/
-    %tr.instruction-text
-      %td{:colspan => img_count}
-        %h2= instruction.title
-        .pt2.pb2
-          = instruction.description
-    %tr.instruction-images
-      - instruction.images.each do |image|
-        %td
-          .img.img-left{:style => "background-image: url('#{image.file.url(:small)}');"}
+  %h2= instruction.title
+  - if instruction.images.any?
+    .pt2
+      %table.instruction-images
+        %colgroup
+          - img_count.times do |i|
+            %col{:width => img_width}/
+        %tr
+          - instruction.images.each do |image|
+            %td
+              .img.img-left{:style => "background-image: url('#{image.file.url(:small)}');"}
+  .instruction-text.pt2
+    = instruction.description.html_safe
