--- a/lib/css/sass/modules/measurements.scss
+++ b/lib/css/sass/modules/measurements.scss
@@ -5,7 +5,7 @@ table.measurements {
   border-collapse: collapse;
   font-size: 0.8em;
   td {
-    padding: $p1 12px;
+    padding: 12px 14px;
   }
   thead {
     color: $dark5;
@@ -20,7 +20,7 @@ table.measurements {
   tbody {
     tr {
       td {
-        border: 2px solid $d1;
+        border: 3px solid $d1;
         border-top: none;
         &:first-child {
           color: $dark5;
@@ -38,11 +38,7 @@ table.measurements {
   }
 }
 .page.measurements {
-  table.main {
-    tr.body {
-      > td {
-        width: 40%;
-      }
-    }
+  td.img-col {
+    width: 40%;
   }
 }
