--- a/app/views/spec_sheet/pages/_images.haml
+++ b/app/views/spec_sheet/pages/_images.haml
@@ -1,6 +1,6 @@
 %td.vtop{:colspan => "2"}
   %table.data.y-fill
-    %tr
+    %tr.vtop
       - data.each do |image|
         %td.pt3
           = render partial: "spec_sheet/image", locals: { src: image.file.url(:medium) }
