--- a/lib/css/pdf.css
+++ b/lib/css/pdf.css
@@ -222,37 +222,62 @@ svg.annotation {
   top: 0;
   left: 0;
   border-radius: 999px;
-  width: 30px;
-  height: 30px;
   background: #51b2fe;
-  border: 4px solid white; }
-  .dot.line-anchor, .dot.arrow-anchor {
-    border-radius: 999px;
-    height: 15px;
-    width: 15px;
-    background: #42ea83;
-    transform: translate(-50%, -50%);
-    -webkit-transform: translate(-50%, -50%); }
+  border: 3px solid white;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  color: #fff;
+  line-height: 1;
+  padding: 10px 0;
+  font-size: 16px;
+  width: 42px;
+  text-align: center; }
+
+.label {
+  position: absolute;
+  background: rgba(0, 0, 0, 0.5);
+  color: #fff;
+  padding: 8px;
+  line-height: 1;
+  border-radius: 4px;
+  -webkit-border-radius: 4px;
+  transform: translate(-50%, -50%);
+  font-size: 18px; }
 
 .comment {
-  border: 2px solid #eee;
-  padding: 40px;
-  font-size: 0.9em;
+  border: 4px solid #eee;
+  padding: 20px;
+  font-size: 18px;
   max-width: 800px; }
   .comment:not(:first-child) {
     margin-top: 20px; }
+  .comment .identifier {
+    border-radius: 999px;
+    -webkit-border-radius: 999px;
+    background: #51b2fe;
+    color: white;
+    padding: 6px 0;
+    float: left;
+    font-size: 18px;
+    width: 35px;
+    text-align: center;
+    margin-right: 20px; }
   .comment .author {
+    padding-top: 10px;
+    float: left;
     margin-bottom: 20px;
-    color: #555;
+    color: #777;
     font-size: 0.8em; }
-    .comment .author .date {
-      opacity: 0.8;
-      float: right;
-      font-size: 0.9em;
-      text-align: right;
-      min-width: 200px; }
+  .comment .date {
+    opacity: 0.7;
+    float: right;
+    font-size: 15px;
+    text-align: right;
+    min-width: 200px; }
   .comment .comment-body:not(:last-child) {
-    padding-bottom: 40px; }
+    padding-bottom: 20px; }
+  .comment .comment-body p:first-of-type {
+    margin-top: 0; }
   .comment .comment-body p:last-of-type {
     margin-bottom: 0; }
   .comment .replies {
@@ -260,13 +285,15 @@ svg.annotation {
     .comment .replies .comment {
       border: 0;
       margin-top: 0;
-      padding: 20px 40px; }
+      padding: 20px 20px; }
+      .comment .replies .comment .author {
+        padding-top: 0; }
       .comment .replies .comment .comment-body {
         padding-bottom: 0; }
       .comment .replies .comment:first-child {
-        padding-top: 40px; }
+        padding-top: 20px; }
       .comment .replies .comment:last-child {
-        padding-bottom: 40px; }
+        padding-bottom: 20px; }
       .comment .replies .comment:not(:last-child) {
         border-bottom: 1px solid #eee; }
   .comment .comment-images {
