--- a/lib/css/sass/modules/comments.scss
+++ b/lib/css/sass/modules/comments.scss
@@ -1,26 +1,43 @@
 .comment {
-  border: $b1;
-  padding: $p3;
-  font-size: 0.9em;
+  border: $b2;
+  padding: $p2;
+  font-size: 18px;
   max-width: 800px;
   &:not(:first-child) {
     margin-top: $p2;
   }
+  .identifier {
+    border-radius: 999px;
+    -webkit-border-radius: 999px;
+    background: $blue;
+    color: white;
+    padding: 6px 0;
+    float: left;
+    font-size: 18px;
+    width: 35px;
+    text-align: center;
+    margin-right: $p2;
+  }
   .author {
+    padding-top: $p1;
+    float: left;
     margin-bottom: $p2;
-    color: #555;
+    color: #777;
     font-size: 0.8em;
-    .date {
-      opacity: 0.8;
-      float: right;
-      font-size: 0.9em;
-      text-align: right;
-      min-width: 200px;
-    }
+  }
+  .date {
+    opacity: 0.7;
+    float: right;
+    font-size: 15px;
+    text-align: right;
+    min-width: 200px;
   }
   .comment-body {
     &:not(:last-child) {
-      padding-bottom: $p3;
+      padding-bottom: $p2;
+    }
+    p:first-of-type {
+      margin-top: 0;
     }
     p:last-of-type {
       margin-bottom: 0;
@@ -31,15 +48,18 @@
     .comment {
       border: 0;
       margin-top: 0;
-      padding: $p2 $p3;
+      padding: $p2 $p2;
+      .author {
+        padding-top: 0;
+      }
       .comment-body {
         padding-bottom: 0;
       }
       &:first-child {
-        padding-top: $p3;
+        padding-top: $p2;
       }
       &:last-child {
-        padding-bottom: $p3;
+        padding-bottom: $p2;
       }
       &:not(:last-child) {
         border-bottom: 1px solid #eee;
