--- a/lib/css/pdf.css
+++ b/lib/css/pdf.css
@@ -242,6 +242,7 @@ svg.annotation {
   border-radius: 4px;
   -webkit-border-radius: 4px;
   transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
   font-size: 18px; }
 
 .comment {
