--- a/lib/css/sass/components/annotations.scss
+++ b/lib/css/sass/components/annotations.scss
@@ -52,5 +52,6 @@ svg.annotation {
   border-radius: 4px;
   -webkit-border-radius: 4px;
   transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
   font-size: 18px;
 }
