--- a/app/views/spec_sheet/pages/_materials.haml
+++ b/app/views/spec_sheet/pages/_materials.haml
@@ -3,19 +3,24 @@
   %table.materials.data
     %thead
       %tr
-        %td Name
         %td Type
-        %td Quantity
-        %td Supplier
-        %td Reference
+        %td Reference no
+        %td Name
         %td Color
+        %td Composition
+        %td.right-align Width
+        %td.right-align Quantity
     %tbody
       - components.each do |component|
         - material = component.material
         %tr
-          %td= material.name
           %td= material.type.name
-          %td= component.quantity
-          %td= material.supplier_name
           %td= material.reference
+          %td= material.name
           %td= material.color
+          %td= material.composition
+          %td.right-align= material.width
+          %td.right-align
+            = component.quantity
+            - if material.unit_type
+              = material.unit_type.display_name
