--- a/app/views/spec_sheet/index.haml
+++ b/app/views/spec_sheet/index.haml
@@ -8,7 +8,7 @@
 %html
   %head
 
-    %meta{:charset => "utf8"}/
+    %meta{:charset => "utf8"}
     %title= @project.name 
     %meta{:content => "width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no", :name => "viewport"}
     - f = File.open("#{Rails.root}/lib/css/pdf.css")
@@ -21,7 +21,7 @@
       = render({ partial: 'spec_sheet/pages/cover' })
 
     - if @components.any? && @options[:materials]
-      - @components.each_slice(20) do |slice|
+      - @components.each_slice(6) do |slice|
         = render_page 'Materials', 'materials', slice
         - @pagenumber += 1
 
